<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Manejo de TXT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="truncate">Truncate</string>
    <string name="Pend">Pendientes</string>
    <string name="Sub">Subidos</string>
    <string name="save">Save</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="tel_fono">Teléfono</string>
    <string name="sync">Sync</string>
    <string name="sincronizar">Sincronizar</string>

</resources>
